# mcpservers

fastfetch/: Cargo.toml  README.md
fastfetch/src/: config.rs  constants.rs  error.rs  main.rs  modules.rs  prompts.rs  resources.rs  schema.rs  tools.rs
flakes/: Cargo.toml  README.md
flakes/src/: main.rs  server.rs
flakes/src/endpoints/: flake_build.rs  flake_eval.rs  flake_inputs.rs  flake_outputs.rs  flake_scaffold.rs  mod.rs
flakes/src/models/: build_result.rs  eval_result.rs  flake_input.rs  flake_output.rs  mod.rs  scaffold_result.rs
flakes/src/templates/: devshell.rs  mod.rs  multi.rs  nixos.rs  package.rs
flakes/src/utils/: logger.rs  mod.rs  nix.rs  template.rs
home-manager/: Cargo.toml
home-manager/src/: config.rs  error.rs  main.rs  metrics.rs  server.rs
home-manager/src/endpoints/: apply_patch.rs  health.rs  hm_build.rs  hm_modules.rs  hm_options.rs  hm_templates.rs  mod.rs
home-manager/src/models/: mod.rs
home-manager/src/utils/: cache.rs  file.rs  logger.rs  mod.rs  nix.rs  rate_limit.rs  security.rs  validation.rs
kitty/: Cargo.toml
kitty/docs/: API.md
kitty/src/: error.rs  lib.rs  main.rs  mcp.rs
kitty/src/endpoints/: kitty_apply.rs  kitty_keybindings.rs  kitty_options.rs  kitty_templates.rs  kitty_theming.rs  kitty_validate.rs  mod.rs
kitty/src/models/: apply_result.rs  kitty_keybinding.rs  kitty_option.rs  kitty_theme.rs  mod.rs  validation_result.rs
kitty/src/tools/: implementations.rs  mod.rs  registry.rs  traits.rs
kitty/src/utils/: diff.rs  extract_args.rs  file_ops.rs  kitty_parser.rs  kitty_schema.rs  logger.rs  mod.rs  path_validation.rs
mako/: Cargo.toml  README.md
mako/docs/: ARCHITECTURE.md
mako/src/: config.rs
mako/src/endpoints/: mako_apply.rs  mako_options.rs  mako_templates.rs  mako_validate.rs  mod.rs
mako/src/mcp/: handlers.rs  protocol.rs  tools.rs
mako/src/utils/: diff.rs  file_ops.rs  logger.rs  mod.rs  parser.rs  validation.rs
neomutt/: Cargo.toml  README.md
neomutt/data/docs/: README.md
neomutt/data/samples/: basic.muttrc  encryption.muttrc  gmail.muttrc  maildir.muttrc  multiple-accounts.muttrc
neomutt/src/: error.rs  main.rs  prompts.rs  resources.rs  utils.rs
neomutt/src/handlers/: config_gen.rs  config_validate.rs  docs.rs  interactive.rs  mod.rs
neomutt/src/models/: config.rs
neomutt/src/parser/: mod.rs  muttrc.rs
neovim/: Cargo.toml  README.md
neovim/src/: lib.rs  main.rs  mcp.rs
neovim/src/core/: ast.rs  diagnostics.rs  mod.rs  model.rs  nvinfo.rs  patch.rs  runtime.rs  schema.rs  template.rs
neovim/src/endpoints/: apply.rs  discover.rs  mod.rs  options.rs  templates.rs  validate.rs
neovim/src/plugins/: lazyvim.rs  mod.rs  plugin_graph.rs  registry.rs
neovim/src/utils/: diff.rs  fs.rs  logger.rs  lua_printer.rs  mod.rs
starship.rs/: Cargo.toml  README.md
starship.rs/docs/: API.md
starship.rs/src/: config.rs  error.rs  lib.rs  main.rs  mcp.rs  server.rs
starship.rs/src/endpoints/: mod.rs  starship_apply.rs  starship_options.rs  starship_presets.rs  starship_templates.rs  starship_validate.rs
starship.rs/src/models/: mod.rs
starship.rs/src/server/: handler.rs
starship.rs/src/utils/: fetcher.rs  file.rs  logger.rs  mod.rs  parser.rs  security.rs  validation.rs
waybar/: Cargo.toml  README.md
waybar/src/: main.rs
waybar/src/endpoints/: mod.rs  waybar_apply.rs  waybar_modules.rs  waybar_scripts.rs  waybar_style.rs  waybar_templates.rs  waybar_validate.rs
waybar/src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs  tools.rs
waybar/src/models/: apply_result.rs  mod.rs  module_option.rs  script.rs  style_snippet.rs  template.rs  validation_result.rs
waybar/src/utils/: config_finder.rs  constants.rs  diff.rs  doc_mapper.rs  file_ops.rs  logger.rs  mod.rs  parser.rs  schema.rs
wofi/: Cargo.toml  README.md
wofi/src/: lib.rs  main.rs  mcp.rs
wofi/src/models/: apply_result.rs  mod.rs  validation_result.rs  wofi_mode.rs  wofi_option.rs  wofi_style_rule.rs  wofi_template.rs
wofi/src/modules/: mod.rs  wofi_apply.rs  wofi_config_locations.rs  wofi_docs.rs  wofi_modes.rs  wofi_options.rs  wofi_styles.rs  wofi_templates.rs  wofi_validate.rs
wofi/src/utils/: atomic_write.rs  config_locator.rs  config_parser.rs  css_parser.rs  diff_utils.rs  doc_mapper.rs  mod.rs  mode_parser.rs
zsh/: Cargo.toml  README.md
zsh/src/: error.rs  lib.rs  main.rs  mcp.rs
zsh/src/endpoints/: mod.rs  zsh_apply.rs  zsh_options.rs  zsh_templates.rs  zsh_validate.rs
zsh/src/models/: mod.rs
zsh/src/utils/: diff.rs  file_ops.rs  logger.rs  mod.rs  parser.rs  schema.rs
