[package]
name = "home-manager-mcp"
version = "1.0.0"
edition = "2021"
description = "Home-Manager configuration management MCP server"
authors = ["Home-Manager MCP Contributors"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
tempfile = "3.8"

# String manipulation
regex = "1.10"

# Path handling
pathdiff = "0.2"

# Shell expansion
shellexpand = "3.1"

# Rate limiting
governor = "0.6"

# Configuration
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"

