[package]
name = "kitty-mcp-server"
version = "1.1.0"
edition = "2021"
authors = ["Kitty MCP Server"]
description = "A Rust-native MCP server providing structured, validated access to Kitty terminal configuration"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
walkdir = "2.4"
diff = "0.1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "kitty_mcp_server"
path = "src/lib.rs"

