[package]
name = "neovim-mcp-server"
version = "1.0.0"
edition = "2021"
authors = ["Neovim MCP Server"]
description = "Ultra-detailed Rust MCP server for Neovim configuration management"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tree-sitter for Lua AST parsing
# Use the version that tree-sitter-lua requires
tree-sitter = "0.19"
tree-sitter-lua = "0.0.9"

# File system operations
walkdir = "2"
dirs = "5"

# Path handling
pathdiff = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# String manipulation
regex = "1.10"

# HTTP client for fetching docs (optional)
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]
tempfile = "3"

