[package]
name = "starship-mcp-server"
version = "1.1.0"
edition = "2021"

[lib]
name = "starship_mcp_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.19"
diff = "0.1"
fs2 = "0.4"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
reqwest = { version = "0.11", features = ["json"] }

