[package]
name = "waybar-rust-mcp"
version = "1.0.0"
edition = "2021"
authors = ["Waybar MCP Contributors"]
description = "Rust-native MCP server for managing Waybar (JSON + CSS) configuration"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
diff = "0.1"
json-patch = "1.0"
regex = "1.10"
url = "2.5"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "waybar-mcp"
path = "src/main.rs"

