[package]
name = "wofi-rust-mcp"
version = "1.1.0"
edition = "2021"
authors = ["Wofi MCP Contributors"]
description = "Rust-native MCP server for managing Wofi launcher configuration, styles, modes, and dmenu-compatible scripts"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.10"
diff = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"

