[package]
name = "zsh-mcp-server"
version = "1.0.0"
edition = "2021"
description = "A Rust-native MCP server to manage Zsh configuration declaratively"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "zsh_mcp_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

